--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <label for="numero-carte" class="block text-sm font-medium text-gray-700 mb-2">Numéro de carte</label>
                 <div class="relative">
                     <div class="absolute inset-y-0 left-0 flex items-center pl-3">
-                        <img id="card-type" src="https://via.placeholder.com/30" 
+                        <img id="card-type" src="https://via.placeholder.com/30"alt="Card Type" class="card-logo"> 
                     </div>
                     <input type="tel" id="numero-carte" placeholder="1234 5678 9012 3456" required maxlength="19"
                         class="input-field w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none pl-14">
